# openframe-oss-tenant

./: .doc-orchestrator-source-files.txt  .gitignore  CLAUDE.md  LICENSE.md  README.md  pom.xml  renovate.json
.github/: CODEOWNERS
.github/steps/helm-override/: action.yml
.github/steps/yaml-lint/: action.yml
.github/workflows/: changes.yml  cleanup.yml  matrix.yml  release.yml  test.yml  version.yml
clients/openframe-chat/: CLAUDE.md  index.html  package.json
clients/openframe-chat/src/: App.tsx
clients/openframe-chat/src-tauri/: Cargo.toml  tauri.conf.json
clients/openframe-chat/src-tauri/capabilities/: default.json
clients/openframe-chat/src-tauri/icons/: icon.icns
clients/openframe-chat/src-tauri/src/: config_reader.rs  lib.rs  token_watcher.rs
clients/openframe-chat/src-tauri/src/nats_bridge/: connection.rs  dialogs.rs  macos_un.rs  mod.rs  notifications.rs  windows_toast.rs
clients/openframe-client/: Cargo.toml  Makefile  build.rs
clients/openframe-client/config/: agent.toml
clients/openframe-client/docs/: PERMISSIONS.md
clients/openframe-client/src/: .lib.md  .main.md  .service.md  .utils.md  banner.rs  lib.rs  main.rs  service.rs  service_adapter.rs  utils.rs
configs/base/: application.yml  openframe-api.yml  openframe-authorization-server.yml  openframe-client.yml  openframe-gateway.yml  openframe-management.yml  openframe-stream.yml
docs/architecture/: README.md
docs/architecture/diagrams/: README-4.mmd  frontend-tenant-api-clients-and-mingo.mmd  stream-service-core-kafka-streams-and-deserialization-5.mmd  stream-service-core-kafka-streams-and-deserialization.mmd  stream-service-core-message-handling-and-enrichment.mmd
docs/architecture/frontend-tenant-api-clients-and-mingo/: frontend-tenant-api-clients-and-mingo.md
docs/architecture/stream-service-core-kafka-streams-and-deserialization/: stream-service-core-kafka-streams-and-deserialization.md
docs/development/architecture/: README.md
docs/getting-started/: first-steps.md  introduction.md  prerequisites.md
manifests/app-of-apps/: values.yaml
manifests/apps/: values.yaml
manifests/tenant/: Chart.yaml  values.yaml
(+1318 files in other folders)
