[package]
name = "openframe-chat"
version = "0.1.0"
description = "OpenFrame Chat Desktop Client"
authors = ["OpenFrame"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-opener = "2"
aes-gcm = "0.10"
base64 = "0.21"
async-nats = { git = "https://github.com/flamingo-stack/nats.rs.git", branch = "main", features = ["websockets"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
tracing = { version = "0.1", features = ["log"] }
percent-encoding = "2"
rand = "0.8"

[target.'cfg(windows)'.dependencies]
dirs = "5"
winreg = "0.52"
mslnk = "0.1.8"
windows = { version = "0.61", features = ["Data_Xml_Dom", "UI_Notifications"] }

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6"
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", features = ["NSApplication", "NSImage"] }
objc2-core-services = { version = "0.3.2", features = ["AE", "AERegistry"] }
objc2-foundation = { version = "0.3.2", features = [
    "NSAppleEventDescriptor",
    "NSAppleEventManager",
    "NSArray",
    "NSBundle",
    "NSData",
    "NSDictionary",
    "NSError",
    "NSSet",
    "NSString",
    "objc2-core-services",
] }
objc2-user-notifications = { version = "0.3.2", features = [
    "UNNotification",
    "UNNotificationAction",
    "UNNotificationCategory",
    "UNNotificationContent",
    "UNNotificationRequest",
    "UNNotificationResponse",
    "UNNotificationTrigger",
    "UNUserNotificationCenter",
] }
